tests/pos/objects/enum-01.ts

enum Operator {
  ADD,
  DIV,
  MUL,
  SUB
}


assert(Operator.ADD === 0);

assert(Operator[Operator.ADD] === "ADD");

