tests/neg/enums/02-enum.ts

enum Operator {
  ADD,
  DIV,
  MUL,
  SUB
}

// Unimplemented
assert(Operator[Operator.ADD] === "SUB");
